--- a/Archip3l/MainWindow.xaml
+++ b/Archip3l/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="Archip3l.MainWindow"
+﻿<app:SofthinkWindow x:Class="SofthinkCoreShowCase.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:app="clr-namespace:SofthinkCore.Application;assembly=SofthinkCore"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Archip3l"
@@ -9,4 +10,4 @@
     <Grid>
         
     </Grid>
-</Window>
+</app:SofthinkWindow>
