--- a/Archip3l/MainWindow.xaml
+++ b/Archip3l/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<app:SofthinkWindow x:Class="SofthinkCoreShowCase.MainWindow"
+﻿<app:SofthinkWindow x:Class="Archip3l.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:app="clr-namespace:SofthinkCore.Application;assembly=SofthinkCore"
@@ -8,6 +8,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <TextBlock Text="toto">
+            
+        </TextBlock>
     </Grid>
 </app:SofthinkWindow>
