--- a/Archip3l/MainWindow.xaml
+++ b/Archip3l/MainWindow.xaml
@@ -7,7 +7,14 @@
         xmlns:local="clr-namespace:Archip3l"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+    <Grid Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
     </Grid>
 </app:SofthinkWindow>
