--- a/Archip3l/MainWindow.xaml
+++ b/Archip3l/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:app="clr-namespace:SofthinkCore.Application;assembly=SofthinkCore"
+        xmlns:nameUiCont="clr-namespace:SofthinkCore.UI.ContextMenu;assembly=SofthinkCore"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Archip3l"
@@ -38,7 +39,6 @@
         </Canvas>
         <!-- Third Island-->
         <Canvas Grid.Column="0" Grid.Row="1" Name="CanIsl3">
-
         </Canvas>
         <!-- Fourth Island -->
         <Canvas Grid.Column="1" Grid.Row="1" Name="CanIsl4">
