--- a/VerticalArchip3l/MainWindow.xaml
+++ b/VerticalArchip3l/MainWindow.xaml
@@ -6,5 +6,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VerticalArchip3l"
         mc:Ignorable="d"
-        Title="MainWindow" Width="3996" Height="2160">
+        Title="MainWindow" Width="1920" Height = "1080">
+        <!--Width="3996" Height="2160">-->
 </app:SofthinkWindow>
