--- a/SofthinkCoreShowCase/DemoManager/DemoManager.xaml
+++ b/SofthinkCoreShowCase/DemoManager/DemoManager.xaml
@@ -33,7 +33,7 @@
                     <StackPanel>
                         <Border BorderThickness="0,0,0,2" BorderBrush="LightGray" Background="WhiteSmoke"  Padding="5">
                             <Grid>
-                                <TextBlock Text="{Binding Name}" Margin="20" FontSize="20"/>
+                                <TextBlock Text="{Binding Name}" Margin="20" FontSize="20" FontWeight="Bold"/>
                                 <Polygon Points="0,0 8,5, 0,10" Stroke="Black" Fill="Black" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5">
                                     <Polygon.RenderTransform>
                                         <RotateTransform Angle="0" x:Name="rotate" />
@@ -69,7 +69,7 @@
         </ItemsControl.Resources>
         <ItemsControl.Template>
             <ControlTemplate>
-                <uic:TouchScrollViewer SofthinkOrientation="Vertical" >
+                <uic:TouchScrollViewer  VerticalScrollBarVisibility="Visible" >
                     <StackPanel IsItemsHost="True" Orientation="Vertical"/>
                 </uic:TouchScrollViewer>
             </ControlTemplate>
