--- a/SofthinkCoreShowCase/Demos/Controls/UbiKeyControlsDemo.xaml
+++ b/SofthinkCoreShowCase/Demos/Controls/UbiKeyControlsDemo.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:ui="http://SofthinkCore/UI"
-             mc:Ignorable="d" >
+             xmlns:ct="clr-namespace:SofthinkCoreShowCase.DemoCommon.Controls"
+             mc:Ignorable="d" 
+             d:DesignHeight="2000" d:DesignWidth="1000">
     <UserControl.Resources>
         <Style TargetType="{x:Type TextBlock}" >
             <Setter Property="FontSize" Value="20" />
@@ -14,8 +16,11 @@
             <Setter Property="Width" Value="300"/>
         </Style>
     </UserControl.Resources>
-    <Grid>
-        <StackPanel HorizontalAlignment="Center" >
+    <Grid Background="Bisque">
+        <ui:TouchScrollViewer >
+            
+        
+        <StackPanel HorizontalAlignment="Center" Margin="100" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="TouchButton" Margin="20" />
                 <ui:TouchButton Margin="20" >
@@ -25,6 +30,20 @@
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="UbiToggleButton" Margin="20" />
                 <ui:UbiToggleButton Margin="20" >Toggle me!!</ui:UbiToggleButton>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="UbiRadioButton" Margin="20" />
+                <StackPanel Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal">
+                        <ui:UbiRadioButton GroupName="A" Margin="20" >Patate</ui:UbiRadioButton>
+                        <ui:UbiRadioButton GroupName="A" Margin="20" >Chou fleur</ui:UbiRadioButton>
+                        <ui:UbiRadioButton GroupName="A" Margin="20" >Topinambour</ui:UbiRadioButton>
+                    </StackPanel>                             
+                <StackPanel Orientation="Horizontal">
+                    <ui:UbiRadioButton GroupName="B" Margin="20" >Bananne</ui:UbiRadioButton>
+                    <ui:UbiRadioButton GroupName="B" Margin="20" >Papaye</ui:UbiRadioButton>
+                </StackPanel>
+                </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="UbiComboBox"  Margin="20"/>
@@ -37,11 +56,123 @@
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="UbiTextBox"  Margin="20"/>
-                <ui:UbiTextBox AutomaticKeyboard="True" xml:space="preserve" FontSize="25" MaxHeight="200" MaxWidth="400" AcceptsReturn="True" >Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                <ui:UbiTextBox AutomaticKeyboard="True" xml:space="preserve" FontSize="25" MaxHeight="200" MaxWidth="400" AcceptsReturn="True"  Margin="20">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
 Cras elementum ultrices diam.</ui:UbiTextBox>
 
             </StackPanel>            
+
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="UbiRichTextBox"  Margin="20"/>
+                    <StackPanel Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal">
+                        <ui:TouchButton ButtonTap="TouchButton_ButtonTap" >Save Rtf</ui:TouchButton>
+                        <ui:TouchButton ButtonTap="TouchButton_ButtonTap_1" >Save Xps</ui:TouchButton>
+                    </StackPanel>                    
+                    <ui:UbiRichTextBox x:Name="richbox" AutomaticKeyboard="True" xml:space="preserve" FontSize="25" MaxHeight="400" MaxWidth="400" AcceptsReturn="True"   Margin="20">
+                            <FlowDocument PagePadding="100"  >
+                            <Paragraph FontSize="36">Hello, world!</Paragraph>
+                            <Paragraph FontStyle="Italic" TextAlignment="Left" FontSize="14" Foreground="Gray">Thanks to the RichTextBox control, this FlowDocument is completely editable!</Paragraph>
+                            <Table >
+                               <TableRowGroup  Paragraph.TextAlignment="Justify"  FontSize="12"  >
+                                   <TableRow  >
+                                        <TableCell>
+                                            <Paragraph Margin="10" >Lorem ipsum dolor sit amet, consectetur adipiscing elit.<LineBreak/>
+    Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.<LineBreak/>
+    Cras elementum ultrices diam.</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph Margin="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<LineBreak/>
+    Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.<LineBreak/>
+    Cras elementum ultrices diam.</Paragraph>
+                                        </TableCell>
+                                       </TableRow>
+                               </TableRowGroup>
+                            </Table>
+                            <BlockUIContainer>
+                                <Image Source="/Resources/logo300.png" Width="200" />
+                            </BlockUIContainer>
+                            <Table>
+                                <TableRowGroup Paragraph.TextAlignment="left">
+                                    <TableRow FontWeight="Bold" >
+                                        <TableCell>
+                                            <Paragraph>Rank</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>Name</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>Medals</Paragraph>
+                                        </TableCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableCell>
+                                            <Paragraph>1</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>Australia</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>74</Paragraph>
+                                        </TableCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableCell>
+                                            <Paragraph>2</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>India</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>38</Paragraph>
+                                        </TableCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableCell>
+                                            <Paragraph>3</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>England</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>37</Paragraph>
+                                        </TableCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableCell>
+                                            <Paragraph>4</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>Canada</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>26</Paragraph>
+                                        </TableCell>
+                                    </TableRow>
+                                    <TableRow>
+                                        <TableCell>
+                                            <Paragraph>5</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>South Africa</Paragraph>
+                                        </TableCell>
+                                        <TableCell>
+                                            <Paragraph>12</Paragraph>
+                                        </TableCell>
+                                    </TableRow>
+                                </TableRowGroup>
+                            </Table>
+                        </FlowDocument>
+                     </ui:UbiRichTextBox>
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="UbiInkCanvas"  Margin="20"/>
+                <ct:InkCanvas/>
+            </StackPanel>
+
         </StackPanel>
+        </ui:TouchScrollViewer>
     </Grid>
 </UserControl>
