--- a/SofthinkCoreShowCase/ShowcaseHome.xaml
+++ b/SofthinkCoreShowCase/ShowcaseHome.xaml
@@ -10,9 +10,18 @@
              xmlns:uib="clr-namespace:SofthinkCore.UI.Base;assembly=SofthinkCore"
              xmlns:manip="clr-namespace:SofthinkCore.UI.Base.Manipulators;assembly=SofthinkCore"
              xmlns:phy="clr-namespace:SofthinkCore.UI.Physic;assembly=SofthinkCore"
+             xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid x:Name="grid" >
+        <Grid.Background>
+            <RadialGradientBrush GradientOrigin="0.2,0.5" Center="0.5,0.5" MappingMode="RelativeToBoundingBox" po:Freeze="True">
+                <GradientStop Color="#4A4683" Offset="1" />
+                <GradientStop Color="#823C79" Offset="0.3"/>
+                <GradientStop Color="#5D407F" Offset="0.7"/>
+                <GradientStop Color="#4A4683" Offset="0" />
+            </RadialGradientBrush>
+        </Grid.Background>
 
         <Viewbox>
             <Border Height="300" Width="500" Background="Transparent">
@@ -42,7 +51,7 @@
 
                     <uib:CanvasRenderTransform x:Name="wheel_cont" Canvas.Left="354.251" Canvas.Top="212.263" Height="141.766"  Width="141.763" >
                         <phy:PhysicItem.PhysicItem>
-                            <phy:PhysicItem  Gravity="0,0" Friction="2" BodyStyle="Shape" x:Name="physic_wheel">
+                            <phy:PhysicItem  Gravity="0,0" Friction="2" BodyStyle="Shape" x:Name="physic_wheel" InitialyseWithUIPosition="True">
                                 <phy:PhysicItem.Shape>
                                     <EllipseGeometry Center="70,70" RadiusX="70" RadiusY="70" />
                                 </phy:PhysicItem.Shape>
@@ -162,7 +171,13 @@
                     </Canvas>
                     </uib:CanvasRenderTransform>
 
-                    <Canvas x:Name="Ubikey" Height="70.391" Canvas.Left="513.218" Canvas.Top="253.364" Width="225.54">
+                    <Canvas x:Name="Ubikey" Height="70.391" Canvas.Left="513.218" Canvas.Top="253.364" Width="225.54" >
+                        <UIElement.CacheMode>
+                            <BitmapCache RenderAtScale="3"/>
+                        </UIElement.CacheMode>
+                        <UIElement.Effect>
+                            <DropShadowEffect BlurRadius="5" Direction="-45" ShadowDepth="2" RenderingBias="Performance" po:Freeze="True" />
+                        </UIElement.Effect>
                         <Canvas x:Name="TextBlock" Height="70.391" Canvas.Left="0" Canvas.Top="0" Width="225.54">
                             <Path Data="F1M0,32.938C0,45.266 10.031,55.297 22.281,55.297 34.672,55.297 44.719,45.266 44.719,32.938L44.719,1.891C44.719,0.86 43.844,0 42.734,0 41.703,0 40.844,0.86 40.844,1.891L40.844,32.938C40.844,43.125 32.547,51.344 22.281,51.422 12.172,51.344 3.875,43.125 3.875,32.938L3.875,1.891C3.875,0.86 3,0 1.89,0 0.859,0 0,0.86 0,1.891L0,32.938" Fill="Black" Height="55.297" Canvas.Left="0" Canvas.Top="0" Width="44.719"/>
                             <Path Data="F1M0,53.406C0,54.422 0.875,55.297 1.906,55.297 3,55.297 3.875,54.422 3.875,53.406L3.875,47.797C7.265,52.375 12.64,55.297 18.718,55.297 29.156,55.297 37.453,46.61 37.453,36.016 37.453,25.281 29.156,16.594 18.718,16.594 12.64,16.594 7.265,19.594 3.875,24.172L3.875,1.891C3.875,0.86 3,0 1.906,0 0.875,0 0,0.86 0,1.891L0,35.235 0,36.016 0,36.813 0,53.406 M3.875,35.391C4.187,27.094 10.75,20.453 18.718,20.453 26.937,20.453 33.578,27.406 33.578,36.016 33.578,44.547 26.937,51.422 18.718,51.422 10.593,51.422 3.875,44.547 3.875,36.016L3.875,35.391" Fill="Black" Height="55.297" Canvas.Left="56.717" Canvas.Top="0" Width="37.453"/>
@@ -173,7 +188,13 @@
                         </Canvas>
                     </Canvas>
                     <Canvas x:Name="thinking" Height="31.188" Canvas.Left="625.642" Canvas.Top="322.375" Width="113.121">
+                        <UIElement.CacheMode>
+                            <BitmapCache RenderAtScale="3" />
+                        </UIElement.CacheMode>
                         <Canvas x:Name="TextBlock1" Height="31.188" Canvas.Left="0" Canvas.Top="0" Width="113.121">
+                            <UIElement.Effect>
+                                <DropShadowEffect BlurRadius="5" Direction="-45" ShadowDepth="2" po:Freeze="True"/>
+                            </UIElement.Effect>
                             <Path Data="F1M6.937,7.203L4.718,7.203 4.718,0.843C4.718,0.421 4.265,0 3.812,0 3.39,0 2.968,0.421 2.968,0.843L2.968,7.203 0.843,7.203C0,7.203 0,7.625 0,8.046 0,8.468 0,8.89 0.843,8.89L2.968,8.89 2.968,21.39C2.968,23.093 4.265,24.359 5.984,24.359 6.406,24.359 6.859,23.937 6.859,23.515 6.859,23.093 6.406,22.64 5.984,22.64 5.562,22.64 4.718,22.218 4.718,21.39L4.718,8.89 6.937,8.89C7.343,8.89 7.765,8.468 7.765,8.046 7.765,7.625 7.343,7.203 6.937,7.203" Fill="#FF747474" Height="24.359" Canvas.Left="0" Canvas.Top="0.141" Width="7.766"/>
                             <Path Data="F1M12.609,23.656C12.609,24.109 12.984,24.5 13.437,24.5 13.937,24.5 14.312,24.109 14.312,23.656L14.312,14.109C14.312,10.156 11.094,7.344 7.141,7.344 4.969,7.344 3.016,8.328 1.719,9.875L1.719,0.844C1.719,0.391 1.328,0 0.844,0 0.391,0 0,0.391 0,0.844L0,13.828 0,14.109 0,23.656C0,23.766 0,23.828 0.047,23.938 0.078,24.047 0.109,24.109 0.187,24.219 0.359,24.391 0.594,24.5 0.844,24.5L0.953,24.5 1.016,24.5C1.062,24.5 1.094,24.469 1.094,24.469 1.328,24.391 1.516,24.25 1.609,24.047 1.656,24.016 1.656,23.969 1.687,23.906 1.687,23.875 1.719,23.828 1.719,23.766L1.719,23.656 1.719,14.109C1.719,11.094 4.172,9.062 7.141,9.062 10.156,9.062 12.609,11.094 12.609,14.109L12.609,23.656" Fill="#FF747474" Height="24.5" Canvas.Left="12.141" Canvas.Top="0" Width="14.312"/>
                             <Path Data="F1M0,21.906C0,22.359 0.375,22.75 0.828,22.75 1.328,22.75 1.703,22.359 1.703,21.906L1.703,6.438C1.703,5.953 1.328,5.594 0.828,5.594 0.375,5.594 0,5.953 0,6.438L0,21.906 M0,1.641C0,2.141 0.375,2.562 0.828,2.562 1.328,2.562 1.703,2.141 1.703,1.641L1.703,0.844C1.703,0.391 1.328,0 0.828,0 0.375,0 0,0.391 0,0.844L0,1.641" Fill="#FF747474" Height="22.75" Canvas.Left="30.703" Canvas.Top="1.75" Width="1.703"/>
